Version 1.0 Fixed text-placement issues, completed landing page, not responsive on all devices yet

--- a/style.css
+++ b/style.css
@@ -10,13 +10,24 @@ h2 {
     padding: 0;
 }
 
+footer {
+    background: #1F2937;
+    color: white;
+}
+
+#copyright-footer {
+    text-align: center;
+    margin: 20px;
+    padding: 20px;
+}
+
 #head-logo {
     margin-left: 25px;
     padding: 0;
 }
 
 #header {
-    background-color: #5d8aa8;
+    background-color: #1F2937;
     color: white;
     margin-top: 0;
     padding: 0;
@@ -43,6 +54,64 @@ h2 {
     top: 75px;
 }
 
+#inspiring-quote-section {
+    background-color: lightgrey;
+}
+
+#inspiring-quote {
+    padding: 3rem;
+    font-size: 21px;
+    color: #1F2937;
+    opacity: 80%;
+}
+
+#thor {
+    text-align: right;
+}
+
+#rand-info-header {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 950;
+    color: #1F2937;
+}
+
+.img-info {
+    height: 30%;
+    width: 20%;
+    margin: 10px;
+    
+}
+
+#mac-keyboard {
+    position: relative;
+    right: 20%;
+    left: 20%;
+    border: 4px solid blue;
+}
+
+#mac-laptop {
+    position: relative;
+    right: 15%;
+    left: 15%;
+    border: 4px solid blue;
+}
+
+#mac-monitor {
+    position: relative;
+    right: 10%;
+    left: 10%;
+    border: 4px solid blue;
+}
+
+
+
+.img-subtext {
+    margin: 45px;
+    display: inline;
+   list-style-type: none;
+}
+
 #web-heading {
     font-size: 48px;
     font-weight: 900;
@@ -65,6 +134,10 @@ h2 {
     margin-left: 50px;
 }
 
+#sign-up-btn:hover {
+    cursor: pointer;
+}
+
 .web-awesome {
     margin-left: 50px;
 }
@@ -80,6 +153,30 @@ h2 {
     display: inline-block;
 }
 
-.navlink:hover {
-    color: red;
+.nav-link:hover {
+    color: blue;
+}
+
+#call-to-action {
+    margin: 15px;
+    padding: 10px;
+color: white;
+background: #3882F6;
+}
+
+.call-action-text {
+    position: relative;
+    left: 20px;
+}
+
+#call-action-heading {
+    font-weight: 800;
+}
+
+#call-action-btn {
+    padding: 5px;
+    color: white;
+    text-decoration: none;
+    border: 2px solid white;
+    border-radius: 5px;
 }
